--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panther-farm",
+  "name": "risi-farm",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,11 @@
     "coverage": "npx builder coverage"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.4.0",
-    "@openzeppelin/test-helpers": "^0.5.6",
+    "@openzeppelin/contracts": "^3.4.1",
+    "@openzeppelin/test-helpers": "^0.5.11",
+    "@truffle/hdwallet-provider": "^1.2.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "truffle": "^5.1.58",
+    "truffle": "^5.3.4",
     "truffle-flattener": "^1.4.4"
   },
   "devDependencies": {
@@ -21,12 +22,12 @@
     "@nomiclabs/buidler-truffle5": "^1.3.4",
     "@nomiclabs/buidler-waffle": "^2.0.0",
     "@nomiclabs/buidler-web3": "^1.3.4",
-    "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.14",
-    "solidity-coverage": "^0.7.13",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.1.4",
+    "solidity-coverage": "^0.7.16",
     "truffle-hdwallet-provider": "^1.0.17",
-    "truffle-plugin-verify": "^0.4.0",
-    "web3": "^1.3.0"
+    "truffle-plugin-verify": "^0.4.1",
+    "web3": "^1.3.5"
   }
 }
